DOC/MINOR: contrib/spoa_server: Fix typo in README
Fix typo in README ps_pyhton.py -> ps_python.py

--- a/contrib/spoa_server/README
+++ b/contrib/spoa_server/README
@@ -34,7 +34,7 @@ The file processor is recognized using the extension. .lua or .luac for lua and
 
     $> ./spoa -d -f ps_lua.lua
 
-	 $> ./spoa -d -f ps_pyhton.py
+	 $> ./spoa -d -f ps_python.py
 
 
   Configure
