--- a/INSTALL
+++ b/INSTALL
@@ -1,17 +1,15 @@
 Installation instructions for HAProxy
 =====================================
 
-HAProxy 2.0 is a long-term supported stable version, which means that it will
-get fixes for bugs as they are discovered during several years and will not
-receive new features. Versions which include the suffix "-dev" are development
-versions and should be avoided in production. If you are not used to build from
-sources or if you are not used to follow updates then it is recommended that
-instead you use the packages provided by your software vendor or Linux
-distribution. Most of them are taking this task seriously and are doing a good
-job at backporting important fixes. If for any reason you'd prefer a different
-version than the one packaged for your system, you want to be certain to have
-all the fixes or to get some commercial support, other choices are available
-at http://www.haproxy.com/.
+This is a development version, so it is expected to break from time to time,
+to add and remove features without prior notification and it should not be used
+in production. If you are not used to build from sources or if you are not used
+to follow updates then it is recommended that instead you use the packages
+provided by your software vendor or Linux distribution. Most of them are taking
+this task seriously and are doing a good job at backporting important fixes. If
+for any reason you'd prefer to use a different version than the one packaged
+for your system, you want to be certain to have all the fixes or to get some
+commercial support, other choices are available at http://www.haproxy.com/.
 
 
 Areas covered in this document
